Centre-aligned h1 was bugging me

--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,6 @@ header {
     padding-bottom: 10px;
 }
 
-header h1 {
-    text-align: center;
-}
-
 main h1 {
     color: rgb(210,105,30);
 }
